# vision_mt2

./: .clang-format  .clangd  .editorconfig  .gitignore  CMakeLists.txt  GIT_GUIDE.md  PROJECT_STRUCTURE.md  README.md  VISUAL_STUDIO_STRUCTURE.md  build-debug.ps1  build-production.ps1  build.bat  build.ps1  check_dependencies.bat  clean.ps1  config.example.json  setup-git.ps1  vcpkg.json  xorstr_examples.cpp
fonts/: IconsFontAwesome6Pro.h  fa-regular-400.h
include/vision/: config.hpp  logger.hpp  result.hpp
include/vision/common/: dependencies.hpp  hook_manager.hpp  logger.hpp
include/vision/metin2_sdk/: sdk.hpp
include/vision/utils/: fnv.hpp  math_utils.hpp  xorstr.hpp
include/vision/utils/memory/: address.hpp  memory.hpp  process.hpp
vision_external/: CMakeLists.txt  logger_impl.cpp  main.cpp  ui.cpp
vision_external/include/memory/: c_memory.hpp
vision_external/include/ui/: d3d9_window.hpp  imgui_demo.hpp  imgui_manager.hpp  imgui_wrapper.hpp
vision_external/src/: main.cpp
vision_external/src/memory/: c_memory.cpp
vision_external/src/ui/: d3d9_window.cpp  imgui_demo.cpp  imgui_manager.cpp  imgui_wrapper.cpp
vision_internal/: CMakeLists.txt  dllmain.cpp
vision_internal/include/hooks/winapi/: message_box_hook.hpp
vision_internal/src/: dllmain.cpp
vision_internal/src/hooks/winapi/: message_box_hook.cpp
